# pytoty

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/pytoty/: __init__.py  cli.py
