[project]
name = "pytoty"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Zakelj", email = "m.zakelj@sportradar.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "pydantic[email]>=2.11.5",
    "typer>=0.16.0",
]

[project.scripts]
pytoty = "pytoty.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

# RUFF CONFIGURATION
[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
